# vLLM-Triton-Fixed-Point-Reductions

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
benchmarks/: bench.py  bench_gemm_tc.py  fixed_point_sum_error.ipynb  gemm_error.ipynb  ncu.py  ops.py  sum_error.ipynb
benchmarks/triton_kernels/: fixed_point_cast_error.ipynb  fixed_point_sum_runtime.ipynb
csrc/: attention.cu  bindings.cpp  casts.cu  fixed_point.cuh  gemm.cu  ops.cpp  ops_internal.h  ptx_mma.cuh  rms_norm.cu  scales.cu  softmax.cu
fxpr_vllm/: __init__.py  _lib.py  attention_backend.py  config.py  library_ops.py  monkey_patches.py  quantisation_config.py  register.py  rms_norm.py  sampling.py  warmup.py
fxpr_vllm/_tests/: __init__.py  fixed_point_helpers.py  test_decode.py  test_fixed_point_cast.py  test_gemm.py  test_gemm_warmup.py  test_log_softmax.py  test_prefill.py  test_rms_norm.py  test_sum.py
fxpr_vllm/_triton/: attention.py  casts.py  fxp.py  gemm.py  rms_norm.py  softmax.py
fxpr_vllm/fixed_point_kernels/: attention.py  gemm.py
fxpr_vllm/vllm_modules/: attention_backend.py  quantisation_config.py  rms_norm.py  sampling.py
scripts/: check_batch_invariance.py
tests/: fixed_point_helpers.py  test_bench_smoke.py  test_decode.py  test_fixed_point_cast.py  test_gemm.py  test_log_softmax.py  test_per_row_scale.py  test_prefill.py  test_rms_norm.py  test_sum.py
tests/triton_kernels/: fixed_point_helpers.py  test_fixed_point_cast.py  test_rms_norm.py  test_sum.py
triton_vllm_fixed_point_reductions/: __init__.py
triton_vllm_fixed_point_reductions/fixed_point_kernels/: decode.py  fixed_point.py  gemm.py  prefill.py  rms_norm.py
triton_vllm_fixed_point_reductions/triton_kernels/: rmsnorm_kernel.py
vllm_fixed_point_reductions/: register.py
vllm_fixed_point_reductions/fixed_point_kernels/: __init__.py  decode.py  fixed_point.py  gemm.py  prefill.py  rms_norm.py  softmax.py
vllm_fixed_point_reductions/vllm_modules/: __init__.py  attention_backend.py  config.py  quantisation_config.py  rms_norm.py  (+2 more)
