[project]
name = "fxpr_vllm"
version = "0.1.0"
description = "Deterministic inference for vLLM via fixed-point reductions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vllm>=0.20.1",
]

[project.entry-points."vllm.general_plugins"]
fxpr_vllm = "fxpr_vllm.register:register"

[build-system]
requires = ["setuptools>=75.0", "wheel", "torch>=2.6"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.5.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]